--- a/public/js/app/cashMonthlys/views/index.html
+++ b/public/js/app/cashMonthlys/views/index.html
@@ -72,7 +72,7 @@
                       </div>
 
 
-                      <div class="col-md-3">
+                      <div class="col-md-2">
                         <div class="form-group" >
                          <label for="expense">Buscar por Concepto</label>
 
@@ -82,10 +82,16 @@
                           
                           </div>
                           </div>
-                      <div class="col-md-3">
+                      <div class="col-md-2">
                         <div class="form-group" >
                           <label for="amount">Monto Acumulado</label>
                           <input type="acumulado" class="form-control" name="acumulado" ng-disabled="true" ng-model="acumulado">
+                      </div> 
+                      </div>
+                      <div class="col-md-2">
+                        <div class="form-group" >
+                          <label for="amount"></label><br>
+                          <input type="submit" class="btn btn-info"  ng-click="generarReporteCajaMen()" value="Generar Reporte">
                       </div> 
                       </div>
 
