--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -1,3 +1,4 @@
+
 <!-- Content Header (Page header) -->
         <section class="content-header">
           <h1>
@@ -13,7 +14,7 @@
         </section>
 
         <!-- Main content -->
-        <section class="content">
+        <section class="content noPrintx ">
         <div class="row">
         <div class="col-md-12">
           <a href="/products/create" type="submit" class="btn btn-primary pull-left">Añadir Producto</a>
@@ -21,7 +22,7 @@
 
         </div>
         </br>
-          <div class="row">
+          <div class="row ">
             <div class="col-md-12">
             <!--//////////////////////////////////////////////////////////////-->
    
@@ -35,6 +36,8 @@
                   <input type="text" ng-model="product.canttoalProducts">
                   <label>----->Total en Stock:</label>
                   <input type="text" ng-model="product.stockA">
+                   <span>Con. Stock</span><input    type="checkbox"  name="variantes" ng-model="check" />
+                           
                   <div class="box-tools">
                   <form ng-keyup="searchProduct()">
                     <div class="input-group" style="width: 200px;">
@@ -66,6 +69,7 @@
                       <th>Línea</th>
                         <th>Variantes</th>
                         <th>Stock</th>
+                        <th ng-show="check">Stock Real</th>
                       <th style="width: 40px">Editar</th>
                         <th>Estado</th>
                       <th style="width: 40px">Eliminar</th>
@@ -89,8 +93,9 @@
                                         <span ng-if="row.proQuantvar == '0'">-</span>
                                 </span>
                         </td>
-                        <td> <button popover-placement="bottom" popover-template="stockTemplate" type="button" class="btn btn-default btn-xs" ng-click="showStock(row.proId)">{{row.stoStockActual}}</button>
+                        <td> <button popover-placement="bottom"  popover-template="stockTemplate" type="button" class="btn btn-default btn-xs" ng-click="showStock(row.proId)">{{row.stoStockActual}}</button>
                         </td>
+                      <td ng-show="check" style="width:90px;"><input type="number" class="form-control" ng-blur="llenarDatosTemp(row.proId,row)" ng-model="temporal[row.proId].stockReal"></td>
                       <td><a ng-click="editProduct(row)" class="btn btn-warning btn-xs">Editar</a></td>
                         <td>
                             <span ng-if="row.proEstado == 1">
@@ -115,12 +120,20 @@
 
                 </div>
                   <!-- Modal -->
+               <button type="button" class="btn btn-info" ng-click="inprimirDatosTemp()">Llenar Datos</button>
+               <br>
+              
+  
+  <!-- scripts -->
+                  
 
               </div><!-- /.box -->
             </div>  
-          </div>
-        </section>
 
+          </div>
+          
+        </section>
+     
 <!-- ===============================================Modal de Variants=============================================-->
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -243,3 +256,41 @@ min-width: 400px;
 width: auto;
 }
 </style>
+
+
+
+
+     <div id="printx" style="display:none;" >
+                <div class="row contenedor2">
+      
+      <div class="col-md-12">
+      <h1 >Reporte Cuadre de Stock</h1><br>
+       <form class="">
+          
+          <div class="">
+          
+          <table class="table table-bordered table-hover">
+                <thead>
+                  <th>#</th>
+                  <th>Producto</th>
+                  <th>Stock Actual</th>
+                  <th>Stock Fisico</th>
+                  <th>Cuadre</th>
+                </thead>
+                <tbody>
+                  <tr ng-repeat="row in temporal2">
+                      <td>{{$index + 1}}</td>
+                      <td>{{row.producto}}</td>
+                      <td>{{row.stock}}</td>
+                      <td>{{row.stockReal}}</td>
+                      <td>{{row.cuadre}}</td>
+                  </tr>
+                </tbody>
+           </table>
+           
+          </div>
+        
+        </form>
+      
+   </div>
+  </div></div>
