--- a/public/report/TiketVariante2.jrxml
+++ b/public/report/TiketVariante2.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Tiket" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="b415bce5-dbb5-4d78-a1f0-81c7cccfaa54">
-	<property name="ireport.zoom" value="1.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Tiket" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="b415bce5-dbb5-4d78-a1f0-81c7cccfaa54">
+	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="idVariante" class="java.lang.String"/>
@@ -38,7 +38,7 @@
 		<band/>
 	</background>
 	<title>
-		<band height="1"/>
+		<band/>
 	</title>
 	<pageHeader>
 		<band/>
@@ -47,28 +47,28 @@
 		<band/>
 	</columnHeader>
 	<detail>
-		<band height="26">
+		<band height="19">
 			<textField isStretchWithOverflow="true">
-				<reportElement x="103" y="3" width="100" height="19" uuid="c8e2c71d-65a4-4d86-95a8-c4bcecc9374e"/>
+				<reportElement x="99" y="0" width="100" height="19" uuid="c8e2c71d-65a4-4d86-95a8-c4bcecc9374e"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Talla}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="303" y="2" width="100" height="20" uuid="6b98b161-cb5e-4eca-aa57-98f5e4b407cc"/>
+				<reportElement x="299" y="0" width="100" height="19" uuid="6b98b161-cb5e-4eca-aa57-98f5e4b407cc"/>
 				<textFieldExpression><![CDATA[$F{modelo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="4" y="3" width="99" height="19" uuid="ca43095e-2b68-4b58-8a13-3cc8f9801654"/>
+				<reportElement x="0" y="0" width="99" height="19" uuid="ca43095e-2b68-4b58-8a13-3cc8f9801654"/>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="203" y="2" width="100" height="20" uuid="cc37e0d3-14d6-48eb-b8da-f4622769cf25"/>
+				<reportElement x="199" y="0" width="100" height="19" uuid="cc37e0d3-14d6-48eb-b8da-f4622769cf25"/>
 				<textFieldExpression><![CDATA[$F{Taco}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="403" y="2" width="100" height="20" uuid="60af11ac-3702-4036-8f1a-f3ad5c48431a"/>
+				<reportElement x="399" y="0" width="100" height="19" uuid="60af11ac-3702-4036-8f1a-f3ad5c48431a"/>
 				<textFieldExpression><![CDATA[$F{image}]]></textFieldExpression>
 			</textField>
 		</band>
