--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -39,7 +39,7 @@
                   <!--<input type="text" ng-model="product.stockA">-->
                    
                    <span style="font-size: 16px; color: red; font-weight: bold;">{{product.stockA | number:0}}</span>
-                  <span>Con. Stock</span><input    type="checkbox"  name="variantes" ng-model="check" />
+                  <span>Con. Inventario</span><input    type="checkbox"  name="variantes" ng-model="check" />
                            
                   <div class="box-tools">
                   <form ng-keyup="searchProduct()">
