--- a/public/report/TiketVariante2.jrxml
+++ b/public/report/TiketVariante2.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Tiket" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="b415bce5-dbb5-4d78-a1f0-81c7cccfaa54">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="297"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="idVariante" class="java.lang.String"/>
 	<queryString>
@@ -44,7 +44,28 @@
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band/>
+		<band height="20">
+			<staticText>
+				<reportElement x="-1" y="0" width="100" height="20" uuid="4b1543a7-ca40-4872-8536-5b3a492045d3"/>
+				<text><![CDATA[Codigo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="99" y="0" width="100" height="20" uuid="10221ddc-91b7-4a28-884f-6607ef13f2dc"/>
+				<text><![CDATA[Talla]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="199" y="0" width="100" height="20" uuid="d41645b5-5a3c-44a8-87df-50ec6e89e952"/>
+				<text><![CDATA[Taco]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="299" y="0" width="100" height="20" uuid="03b9cecc-2f17-4881-8347-8b616d4b5008"/>
+				<text><![CDATA[Color]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="399" y="0" width="100" height="20" uuid="95dafc51-e8dc-4fbb-9aef-1f58eac152d0"/>
+				<text><![CDATA[Modelo]]></text>
+			</staticText>
+		</band>
 	</columnHeader>
 	<detail>
 		<band height="19">
