--- a/public/report/MejoresClientes.jrxml
+++ b/public/report/MejoresClientes.jrxml
@@ -13,7 +13,7 @@
 		<defaultValueExpression><![CDATA[10]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select e.nombres,e.apellidos,SUM(s.montoBruto) as totSollesVentas,SUM(ds.cantidad) from sales s inner join employees e on e.id=s.employee_id inner join detSales ds on ds.sale_id=s.id where s.fechaPedido between $P{fechaini} and $P{fechafin}  group by e.id order by totSollesVentas desc limit $P{cant};]]>
+		<![CDATA[select e.nombres,e.apellidos,SUM(s.montoBruto) as totSollesVentas,SUM(ds.cantidad) as totCantidad from sales s inner join employees e on e.id=s.employee_id inner join detSales ds on ds.sale_id=s.id where s.fechaPedido between $P{fechaini} and $P{fechafin}  group by e.id order by totCantidad desc limit $P{cant};]]>
 	</queryString>
 	<field name="nombres" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -22,7 +22,7 @@
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="totSollesVentas" class="java.math.BigDecimal"/>
-	<field name="SUM(ds.cantidad)" class="java.math.BigDecimal"/>
+	<field name="totCantidad" class="java.math.BigDecimal"/>
 	<background>
 		<band/>
 	</background>
@@ -95,7 +95,7 @@
 				<textElement>
 					<font size="14"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{SUM(ds.cantidad)}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{totCantidad}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
