--- a/public/report/TiketVariante.jrxml
+++ b/public/report/TiketVariante.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Tiket" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="b415bce5-dbb5-4d78-a1f0-81c7cccfaa54">
-	<property name="ireport.zoom" value="5.0"/>
+	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="idVariante" class="java.lang.String"/>
@@ -44,24 +44,41 @@
 		<band/>
 	</pageHeader>
 	<columnHeader>
-		<band/>
+		<band height="20">
+			<staticText>
+				<reportElement x="1" y="0" width="100" height="20" uuid="fca68111-09c0-4969-aa15-28f934e787d7"/>
+				<text><![CDATA[Codigo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="101" y="0" width="100" height="20" uuid="e187ca14-e1f8-4215-aa9f-8f9a074060e8"/>
+				<text><![CDATA[Talla]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="201" y="0" width="100" height="20" uuid="957b4558-2776-4a11-8b39-b649aba4dda6"/>
+				<text><![CDATA[Precio]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="301" y="0" width="100" height="20" uuid="d64fe92a-edea-4046-aadf-bd7babaaef5c"/>
+				<text><![CDATA[Sku]]></text>
+			</staticText>
+		</band>
 	</columnHeader>
 	<detail>
 		<band height="20">
 			<textField>
-				<reportElement x="203" y="0" width="100" height="20" uuid="6b98b161-cb5e-4eca-aa57-98f5e4b407cc"/>
+				<reportElement x="201" y="0" width="100" height="20" uuid="6b98b161-cb5e-4eca-aa57-98f5e4b407cc"/>
 				<textFieldExpression><![CDATA[$F{modelo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="0" width="103" height="20" uuid="ca43095e-2b68-4b58-8a13-3cc8f9801654"/>
+				<reportElement x="1" y="0" width="100" height="20" uuid="ca43095e-2b68-4b58-8a13-3cc8f9801654"/>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="303" y="0" width="100" height="20" uuid="380588a3-e769-477c-b7dc-a9538ea4b601"/>
+				<reportElement x="301" y="0" width="100" height="20" uuid="380588a3-e769-477c-b7dc-a9538ea4b601"/>
 				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement x="103" y="0" width="100" height="20" uuid="c8e2c71d-65a4-4d86-95a8-c4bcecc9374e"/>
+				<reportElement x="101" y="0" width="100" height="20" uuid="c8e2c71d-65a4-4d86-95a8-c4bcecc9374e"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
