--- a/public/report/cardexTop10Mejores.jrxml
+++ b/public/report/cardexTop10Mejores.jrxml
@@ -30,18 +30,11 @@
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="0c2f27bf-98c8-44ca-86c6-87c020dc1415"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="46a76e7c-b0db-4c30-b703-733f08c7f06a"/>
+					<reportElement x="20" y="20" width="356" height="43" forecolor="#FFFFFF" uuid="46a76e7c-b0db-4c30-b703-733f08c7f06a"/>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[TITLE]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="17469c34-c7ad-43cc-926b-c7453411af7e"/>
-					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Add a description here]]></text>
+					<text><![CDATA[Top 10 Mejores]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -98,36 +91,36 @@
 			</line>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="184" y="0" width="85" height="20" uuid="b1f258dc-aca2-4053-97a1-7a2adad3b4e3"/>
-				<textElement>
-					<font size="14"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="184" height="20" uuid="b295a189-90d3-48c0-bd11-ccdc47a4f588"/>
 				<textElement>
-					<font size="14"/>
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{producto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy">
 				<reportElement x="429" y="0" width="126" height="20" uuid="827bf8ad-4c4a-4ee5-baff-19ccf96008d6"/>
-				<textElement>
-					<font size="14"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{created_at}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="343" y="0" width="86" height="20" uuid="1610faae-e500-4a6e-a2ec-247368a1af97"/>
-				<textElement>
-					<font size="14"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cantida}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="269" y="0" width="74" height="20" uuid="159f9d5d-e497-44f2-b89f-220ed2312591"/>
-				<textElement>
-					<font size="14"/>
+				<textElement textAlignment="Center">
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
 			</textField>
