--- a/public/report/cardextop10PeoreRFechas.jrxml
+++ b/public/report/cardextop10PeoreRFechas.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="cardextop10PeoreRFechas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0fe89786-adf0-4e7b-880d-26e17bcc7ea0">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="81"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaini" class="java.lang.String"/>
 	<parameter name="fechafin" class="java.lang.String"/>
@@ -31,18 +31,11 @@
 			<frame>
 				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="495a8639-7e77-4897-9cc5-0cea11aac3fb"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="cdaa21cf-15ba-4208-a23a-f23cf80aa55b"/>
+					<reportElement x="20" y="20" width="466" height="43" forecolor="#FFFFFF" uuid="cdaa21cf-15ba-4208-a23a-f23cf80aa55b"/>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
-					<text><![CDATA[TITLE]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="458e2723-1fcf-45ca-a83e-32a997a76a2f"/>
-					<textElement textAlignment="Right">
-						<font size="14" isBold="false"/>
-					</textElement>
-					<text><![CDATA[Add a description here]]></text>
+					<text><![CDATA[Top 10 Menos Vendidos]]></text>
 				</staticText>
 			</frame>
 		</band>
@@ -99,36 +92,36 @@
 			</line>
 			<textField isStretchWithOverflow="true">
 				<reportElement mode="Opaque" x="202" y="0" width="82" height="20" backcolor="#808080" uuid="1b218847-e183-41fd-b356-694c9e109b06"/>
-				<textElement>
-					<font size="12"/>
+				<textElement textAlignment="Center">
+					<font size="10" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement mode="Opaque" x="284" y="0" width="82" height="20" backcolor="#808080" uuid="ebe12189-69ca-4372-a798-468979791686"/>
-				<textElement>
-					<font size="12"/>
+				<textElement textAlignment="Center">
+					<font size="10" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sku}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement mode="Opaque" x="0" y="0" width="202" height="20" backcolor="#808080" uuid="8d831e5c-f6e4-40c2-990e-4893b22008f7"/>
 				<textElement>
-					<font size="12"/>
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{producto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy">
 				<reportElement mode="Opaque" x="444" y="0" width="111" height="20" backcolor="#808080" uuid="cde45539-9910-4364-b50c-3038effb582d"/>
-				<textElement>
-					<font size="12"/>
+				<textElement textAlignment="Center">
+					<font size="10" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{created_at}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement mode="Opaque" x="365" y="0" width="79" height="20" backcolor="#808080" uuid="db69c5ef-8906-4db3-a6e5-159203c76a84"/>
-				<textElement>
-					<font size="12"/>
+				<textElement textAlignment="Center">
+					<font size="10" isStrikeThrough="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{cantida}]]></textFieldExpression>
 			</textField>
