ultimos cambios finalizados

--- a/public/js/app/cashes/views/index.html
+++ b/public/js/app/cashes/views/index.html
@@ -119,7 +119,8 @@
 
 
                 </div>
-                <div class="row">
+                <div id="reportCajas">
+                <div class="row" >
                 <div class="col-md-1">  </div>
                     <div class="col-md-4">                             
                             <label for="fechaPedido">Fecha Inicio: </label>
@@ -143,7 +144,7 @@
                         <label></label> <br>
                         <input ng-disabled="fechafin<fechainicio" type="button" class="btn btn-warning" ng-click="GenReporteCajas()" value="{{decriboton}}">
                         </div>
-                </div><br>
+                </div><br></div>
               </div><!-- /.box -->
 
               </div>
