--- a/public/js/app/products/views/index.html
+++ b/public/js/app/products/views/index.html
@@ -194,6 +194,7 @@
             <h3 class="box-title">Stock</h3>
 
         </div><!-- /.box-header -->
+        <div style="height: 150px; overflow-y: scroll;">
         <div class="box-body table-responsive no-padding">
             <table class="table table-hover">
                 <tbody><tr>
@@ -220,7 +221,7 @@
 
 
                 </tbody></table>
-        </div><!-- /.box-body -->
+        </div></div><!-- /.box-body -->
     </div>
 </script>
 
