--- a/public/report/MejoresClientes2.jrxml
+++ b/public/report/MejoresClientes2.jrxml
@@ -13,7 +13,7 @@
 		<defaultValueExpression><![CDATA[10]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[select e.nombres,e.apellidos,SUM(s.montoBruto) as totSollesVentas,SUM(ds.cantidad) as totcantidad from sales s inner join customers e on e.id=s.customer_id inner join detSales ds on ds.sale_id=s.id where s.fechaPedido between $P{fechaini} and $P{fechafin} group by e.id order by totcantidad desc limit $P{cant};]]>
+		<![CDATA[select e.nombres,e.apellidos,SUM(s.montoTotal) as totSollesVentas,SUM(ds.cantidad) as totcantidad from sales s inner join customers e on e.id=s.customer_id inner join detSales ds on ds.sale_id=s.id where s.fechaPedido between $P{fechaini} and $P{fechafin} group by e.id order by totSollesVentas desc limit $P{cant};]]>
 	</queryString>
 	<field name="nombres" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -85,14 +85,14 @@
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="276" y="0" width="138" height="20" uuid="269b65e8-7a08-4947-bfc5-14a05e37bd77"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA["S/."+$F{totSollesVentas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
 				<reportElement x="414" y="0" width="138" height="20" uuid="cab91af0-af45-4e51-9842-7e8cb6299923"/>
-				<textElement>
+				<textElement textAlignment="Center">
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{totcantidad}]]></textFieldExpression>
